Fix Elastic Beanstalk config and update requirements

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,4 +1,5 @@
-options_setting:
-    "aws:elasticbeanstalk:container:python":
-        WSGIPath: application:application
-        
+option_settings:
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: application:application
+  aws:elasticbeanstalk:application:environment:
+    PYTHONPATH: /var/app/current:$PYTHONPATH
