--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -3,3 +3,12 @@ option_settings:
     WSGIPath: application:application
   aws:elasticbeanstalk:application:environment:
     PYTHONPATH: /var/app/current:$PYTHONPATH
+
+packages:
+  yum:
+    gcc: []
+    gcc-c++: []
+    make: []
+    libffi-devel: []
+    openssl-devel: []
+    python3-devel: []
