--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,14 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:python:
+  "aws:elasticbeanstalk:container:python":
     WSGIPath: application:application
-  aws:elasticbeanstalk:application:environment:
-    PYTHONPATH: /var/app/current:$PYTHONPATH
-
-packages:
-  yum:
-    gcc: []
-    gcc-c++: []
-    make: []
-    libffi-devel: []
-    openssl-devel: []
-    python3-devel: []
