--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-﻿Flask==3.0.0
-gunicorn==21.2.0
-python-dotenv==1.1.1
-numpy==2.1.3
-pandas==2.2.3
-scikit-learn==1.7.2
-matplotlib==3.10.8
-seaborn==0.13.2
+﻿pandas
+numpy
+seaborn
+matplotlib
+scikit-learn
+catboost
+xgboost
+Flask
+
+#-e .
